--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   width: 200px;
   height: 200px;
   border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .square:hover {
   border: 2px red;
